# syncopation-study

./: .gitignore  README.md
make-sqlite/: pyproject.toml  pyrightconfig.json
make-sqlite/dbt/: .user.yml  data.sqlite3  dbt_project.yml  profiles.yml
make-sqlite/dbt/models/: albums.sql  artists.sql  audio_features.sql  best_midi_to_spotify_flat.sql  best_midi_to_spotify_flat_with_features.sql  best_spotify_to_midi_flat.sql  best_spotify_to_midi_flat_with_features.sql  midi_files.sql  midi_spotify_map.sql  schema.yml  spotify_album_map.sql  spotify_artist_map.sql  spotify_tracks.sql
make-sqlite/dbt/tests/test_midis/: bembe_rhythm.mid  hesitation_rhythm.mid  triplet_rhythm.mid
make-sqlite/models/: midi.py
make-sqlite/src/: WNBD.py  _utils.py  make_midi.py  make_sqlite.py  models.py  test.py
make-sqlite/src/synpy3/: README.md  WNBD.py  midiparser.py  music_objects.py  parameter_setter.py  pyproject.toml  readmidi.py  rhythm_parser.py  syncopation.py  test_WNBD.py
make-sqlite/src/synpy3/test_midis/wnbd/: anticipation_rhythm.mid  anticipation_rhythm.xml  bembe_rhythm.xml  bossa_nova_rhythm.mid  bossa_nova_rhythm.xml  hesitation_rhythm.xml  syncopation_rhythm.mid  syncopation_rhythm.xml  triplet_rhythm.xml
make-sqlite/tests/: test_WNBD.py
