[tool.poetry]
name = "make-sqlite"
version = "0.1.0"
description = ""
authors = ["jamesweiland <jameskw2@illinois.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "1.0.0"
dbt-sqlite = "1.0.0"
markupsafe = "2.0.1"
pytz = "^2024.2"
pandas = "^2.2.3"
miditoolkit = "^1.0.1"
pytest = "^8.3.4"
pydantic = "*"
pathlib = "^1.0.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
